--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "body-parser": "^1.18.2",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^1.1.4",
@@ -35,6 +36,9 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.2.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "express-mongo-db": "^2.0.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
